# src/routes/eventRoutes.ts
@@ -7,6 +7,7 @@ import {
     registerForEvent,
     createTeam,
     getRegistrationTicket,
+    getRegistrationQR,
 } from '../controllers/registrationController';
 import { getEventAnnouncements } from '../controllers/dashboardController';
 import { authenticate } from '../middlewares/authMiddleware';
@@ -21,6 +22,7 @@ router.get('/:id/announcements', getEventAnnouncements);
 // Participant Routes
 router.post('/:id/register', authenticate, registerForEvent);
 router.get('/:id/ticket', authenticate, getRegistrationTicket);
+router.get('/:id/ticket/qr', authenticate, getRegistrationQR);
 router.post('/:id/teams', authenticate, createTeam);
 
 export default router;
